feat:create basic server in backend and then create health api to check the server work or not..and crete .env file and store port inside it

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js",
-    "vite": "node index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
